# puc-archive

aeds/lab/assignments/Concatenar vetores/: Concatenar.c
aeds/lab/assignments/Conversao binario - Vetores/: Conversao.c
aeds/lab/assignments/Fatorial/: Fatorial.c
aeds/lab/assignments/Heranca/: heranca.cpp
aeds/lab/assignments/Robo - Vetor/: Robo.c
aeds/lab/assignments/Soma Matriz/: SomaMatriz.c  pub.in
aeds/lab/assignments/Soma Serie/: SomaSerie.c
aeds/lab/assignments/Vetor/: Vetor.c
aeds/lab/assignments/Vetor - Notas/: VetorNotas.c
aeds/lab/tests/p2/: Q2.c  Q3.c  Q4.c
diw/TP2/: package-lock.json
diw/TP2/public/assets/css/: style.css
diw/TP2/public/assets/js/: main.js  repo.js
p1/aeds/lab/assignments/Busca string/: Busca.c  Busca2.c  pub.in
p1/aeds/lab/assignments/Divisores/: Divisores.c
p1/aeds/lab/assignments/Invertido/: Invertido.c
p1/aeds/lab/assignments/PrimoV2/: PrimoV2.c
p1/diw/TP1/: index.html
p1/diw/TP2/: package.json
p1/diw/TP2/db/: db.json
p1/diw/TP2/public/: index.html  repo.html
p2/ac/jflap/: fsm.jff  fsm2.jff  mealy.jff  mealy2.jff  moore.jff  moore2.jff
p2/ac/logisim/: additive-circuits.circ  bit-shifting.circ  counters.circ  frequency-division.circ  fsm.circ  latches.circ  ram.circ  ring.circ  sap.circ  subtractive-circuits.circ
p2/aeds2/assignments/tp2/: Pokemon.java
p2/aeds2/assignments/tp4/: Main.java
p2/aeds2/src/c/sorting/: CMakeLists.txt
p2/aeds2/src/c/sorting/app/: main.c
p2/aeds2/src/c/sorting/include/: arrays.h  countingsort.h  swap.h
p2/aeds2/src/c/sorting/lib/: arrays.c  countingsort.c
(+434 files in other folders)
